# uroboro

./: uroboro.cabal
executables/: uroboro.hs
samples/: codata-subtypes.uro  data-defaults.uro  data-subtypes-vars.uro  data-subtypes.uro  prelude.uro  type-conversion.uro
src/Uroboro/: Checker.hs  Interpreter.hs  Parser.hs  Subtyping.hs  Token.hs
src/Uroboro/Checker/: Monad.hs
src/Uroboro/Tree/: Common.hs  External.hs  Internal.hs
test/Uroboro/: CheckerSpec.hs  InterpreterSpec.hs  ParserSpec.hs  SubtypingSpec.hs
